--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,26 @@
 .navbar {
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  background-color: white; /* White background */
 }
 
 .navbar-brand {
   font-weight: 700;
   font-size: 1.5rem;
+}
+
+.navbar-brand, .nav-link {
+  color: rgb(33, 67, 228) !important; /* Update text color */
+}
+
+.nav-link:hover {
+  color: rgb(171, 95, 236) !important; /* Update hover text color */
+}
+
+.btn-primary {
+  background: var(--linearPrimaryAccent) !important; /* Use gradient background */
+  border: none; /* Remove border */
+}
+
+.btn-primary:hover {
+  background: var(--linearSecondaryAccent) !important; /* Use gradient background on hover */
 }
