--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -41,7 +41,7 @@
 }
 
 .hero h1 .highlight {
-  color: rgb(171, 95, 236); /* Darker and closer to purple */
+  color: rgb(197, 137, 249); /* Darker and closer to purple */
 }
 
 .hero-button {
@@ -70,14 +70,18 @@
   max-width: 100%; /* Ensure columns take up to 50% width */
 }
 
+
+
 .dashboard-image {
   max-width: 70%; /* Make the image slightly smaller */
   height: auto; /* Maintain aspect ratio */
   display: block; /* Ensure the image is a block element */
-  border: 5px solid var(--linearPrimaryAccent); /* Add themed border */
-  border-radius: 10px; /* Add rounded corners */
+  border: 0.6rem solid; /* Make the border thicker */
+  border-image: var(--linearPrimaryAccent) 1; /* Use gradient for border with transparent effect */
+  border-radius: 0%; /* Add rounded corners */
   margin-top: 3rem; /* Add more space above the image */
   margin-bottom: 3rem; /* Add more space below the image */
+  background-attachment: scroll; /* Ensure the image scrolls with the page */
 }
 
 .feature-card {
